# fastapi-versioning

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  sample.py  setup.cfg  setup.py  tox.ini
example/: app.py  item.py
example/annotation/: app.py  item.py  store.py
example/custom_default_version/: app.py
example/major_version_only/: app.py
example/proxy/: README.md  app.py  routes.toml
example/router/: app.py  v1_0.py  v1_1.py
fastapi_versioning/: __init__.py  routing.py  versioning.py
scripts/: build.sh  bumpversion.sh  ci.sh  lint-fix.sh  lint.sh  static-analysis.sh  test.sh  type-check.sh  upload.sh
tests/: test_dependency_overrides.py  test_example.py  test_something.py
tests/example/: test_example.py
tests/unit/: test_root_path.py
