[metadata]
description = This package provides the input and output schemas used by the CoreAPI in its endpoints
name = fast-api-versioning
version = 1.0.0
author = Imogate
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir =
    = fastapi_versioning
packages = find:

[options.packages.find]
where=src
exclude = tests*
